desenvolvimento da página de cadasrtos, componentes de cadastro, cadastros pessoal, cadastro conjuge e cadastro de endereço e atualização no dashboard

--- a/src/components/Sidebar/sidebar.module.css
+++ b/src/components/Sidebar/sidebar.module.css
@@ -1,4 +1,9 @@
 .owner-bg{
     background-color: #1A2226;
-    height: 100vh;
+    height: 95vh;
+    font-family: var(--font-text)
+}
+
+.link{
+    text-decoration: none;
 }
