--- a/src/components/Titlebar/titlebar.module.css
+++ b/src/components/Titlebar/titlebar.module.css
@@ -1,3 +1,9 @@
 .owner-bg{
     background-color: #357CA5;
 }
+
+.title{
+    text-decoration: none;
+    font-size: 24px;
+    font-family: var(--font-title);
+}
