Conclusão dos cadastros

--- a/src/components/Sidebar/sidebar.module.css
+++ b/src/components/Sidebar/sidebar.module.css
@@ -4,6 +4,11 @@
     font-family: var(--font-text)
 }
 
+
 .link{
     text-decoration: none;
+}
+
+.link:hover{
+    text-decoration: underline;  
 }
