--- a/src/components/Inicio/Inicio.module.css
+++ b/src/components/Inicio/Inicio.module.css
@@ -10,3 +10,11 @@
 .bold{
     font-weight: bolder;
 }
+
+.font-title{
+    font-family: var(--font-title);
+}
+
+.font-text{
+    font-family: var(--font-text);
+}
