--- a/src/components/Listas/MembroId/membro.module.css
+++ b/src/components/Listas/MembroId/membro.module.css
@@ -18,12 +18,6 @@
     text-decoration: none;
 }
 
-.button-link{
-    font-weight: bold;
-}
-
-@media screen and (max-width: 450px){
-    .text-link{
-        display: none;
-    }
+.data{
+    font-size: 15px;
 }
