--- a/src/components/Inicio/Inicio.module.css
+++ b/src/components/Inicio/Inicio.module.css
@@ -49,7 +49,127 @@
 .backGroundEtnia{
     background-image:
     linear-gradient(rgba(14, 26, 32, 0.842), rgba(26, 34, 38, 0.925)),
-     url('../../assets/iversidade2.jpg');
+     url('../../assets/diversidade2.jpg');
+    background-repeat: no-repeat;
+    background-position: bottom center;
+    background-size: cover;
+}
+.backGroundDeficiencia{
+    background-image:
+    linear-gradient(rgba(14, 26, 32, 0.842), rgba(26, 34, 38, 0.925)),
+     url('../../assets/deficiencia.jpg');
+    background-repeat: no-repeat;
+    background-position: bottom center;
+    background-size: cover;
+}
+.backGroundSeguro{
+    background-image:
+    linear-gradient(rgba(14, 26, 32, 0.842), rgba(26, 34, 38, 0.925)),
+     url('../../assets/seguro.jpg');
+    background-repeat: no-repeat;
+    background-position: bottom center;
+    background-size: cover;
+}
+.backGroundTrabalhista{
+    background-image:
+    linear-gradient(rgba(14, 26, 32, 0.842), rgba(26, 34, 38, 0.925)),
+     url('../../assets/trabalhista.jpg');
+    background-repeat: no-repeat;
+    background-position: bottom center;
+    background-size: cover;
+}
+.backGroundLocalidade{
+    background-image:
+    linear-gradient(rgba(14, 26, 32, 0.842), rgba(26, 34, 38, 0.925)),
+     url('../../assets//localidade.jpg');
+    background-repeat: no-repeat;
+    background-position: bottom center;
+    background-size: cover;
+}
+.backGroundTipoConstrucao{
+    background-image:
+    linear-gradient(rgba(14, 26, 32, 0.842), rgba(26, 34, 38, 0.925)),
+     url('../../assets/tipo-construcao.jpg');
+    background-repeat: no-repeat;
+    background-position: bottom center;
+    background-size: cover;
+}
+.backGroundPsf{
+    background-image:
+    linear-gradient(rgba(14, 26, 32, 0.842), rgba(26, 34, 38, 0.925)),
+     url('../../assets/psf.jpg');
+    background-repeat: no-repeat;
+    background-position: bottom center;
+    background-size: cover;
+}
+.backGroundPraca{
+    background-image:
+    linear-gradient(rgba(14, 26, 32, 0.842), rgba(26, 34, 38, 0.925)),
+     url('../../assets/praca.jpg');
+    background-repeat: no-repeat;
+    background-position: bottom center;
+    background-size: cover;
+}
+.backGroundPolicial{
+    background-image:
+    linear-gradient(rgba(14, 26, 32, 0.842), rgba(26, 34, 38, 0.925)),
+     url('../../assets/delegacia.jpg');
+    background-repeat: no-repeat;
+    background-position: bottom center;
+    background-size: cover;
+}
+.backGroundCreche{
+    background-image:
+    linear-gradient(rgba(14, 26, 32, 0.842), rgba(26, 34, 38, 0.925)),
+     url('../../assets/creche.jpg');
+    background-repeat: no-repeat;
+    background-position: bottom center;
+    background-size: cover;
+}
+.backGroundAgua{
+    background-image:
+    linear-gradient(rgba(14, 26, 32, 0.842), rgba(26, 34, 38, 0.925)),
+     url('../../assets/abastecimento-agua.jpg');
+    background-repeat: no-repeat;
+    background-position: bottom center;
+    background-size: cover;
+}
+.backGroundEnergia{
+    background-image:
+    linear-gradient(rgba(14, 26, 32, 0.842), rgba(26, 34, 38, 0.925)),
+     url('../../assets/energia-eletrica.jpg');
+    background-repeat: no-repeat;
+    background-position: bottom center;
+    background-size: cover;
+}
+.backGroundLixo{
+    background-image:
+    linear-gradient(rgba(14, 26, 32, 0.842), rgba(26, 34, 38, 0.925)),
+     url('../../assets/lixo.jpg');
+    background-repeat: no-repeat;
+    background-position: bottom center;
+    background-size: cover;
+}
+.backGroundEsgoto{
+    background-image:
+    linear-gradient(rgba(14, 26, 32, 0.842), rgba(26, 34, 38, 0.925)),
+     url('../../assets/esgoto.jpg');
+    background-repeat: no-repeat;
+    background-position: bottom center;
+    background-size: cover;
+}
+.backGroundCoabitacao{
+    background-image:
+    linear-gradient(rgba(14, 26, 32, 0.842), rgba(26, 34, 38, 0.925)),
+     url('../../assets/coabitacao.jpg');
+    background-repeat: no-repeat;
+    background-position: bottom center;
+    background-size: cover;
+}
+.backGroundCondicao{
+    background-image:
+    linear-gradient(rgba(14, 26, 32, 0.842), rgba(26, 34, 38, 0.925)),
+     url('../../assets/alvenaria.jpg');
     background-repeat: no-repeat;
     background-position: bottom center;
     background-size: cover;
