--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
     --primary-dark: #222D32;
     --secondary-dark: #2C3B41;
 
-    --font-title: "Montserrat", sans-serif;
+    --font-title: "Roboto", sans-serif;
     --font-text: "Inter", sans-serif;
 }
 
